@@ -1,3 +1,5 @@
+Added boldness on text for subscription and registration.
+Properly handle emails for users who are already registered but then "subscribe".
 Added admin option to "deactivate" user accounts.
 Common translation deployment tested and working. (Support added for Flex / multiple sims in a Flash project)
 HTTPS default for login and registering. Added general HTTPS support to AbstractLinker. Added https-available website property.
